--- a/app/src/app/topic/topic.component.html
+++ b/app/src/app/topic/topic.component.html
@@ -1,73 +1,99 @@
 <div class="main-content" style="height: 100%; width: 100%;">
     <div class="container-fluid" style="height: 100%; width: 100%;">
-      <div class="span"></div>
-      <div class="row">
-          <span class="col-md-4"></span>
-          <div class="col-md-4">
-            <form class="text-center">
-                <div class="row">
-                    <div class="col-md-9">
-                        <mat-form-field class="example-full-width">
-                          <input matInput placeholder="Topic Title" [(ngModel)]="topic.title" name="topic.title" required>
-                        </mat-form-field>
+        <div class="span"></div>
+        <div class="clearfix"></div>
+        <div class="row">
+            <span class="col-md-4"></span>
+            <div class="col-md-4">
+                <form class="text-center">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Topic Title" [(ngModel)]="topic.title" name="topic.title" required>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-3">
+                            <button mat-raised-button type="submit" class="btn btn-success" (click)="onCreate()">Create</button>
+                        </div>
                     </div>
-                    <div class="col-md-3">
-                        <button mat-raised-button type="submit" class="btn btn-danger" (click)="onCreate()">Create</button>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </form>
-          </div>
+                    <div class="clearfix"></div>
+                </form>
+            </div>
 
-      </div>
-      <div class="row" *ngIf="topics.length == 0">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header card-header-danger">
-                    <h4 class="card-title">No topics found</h4>
+        </div>
+        <div class="row" *ngIf="topics.length == 0">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header card-header-primary">
+                        <h4 class="card-title">No topics found</h4>
+                    </div>
                 </div>
             </div>
-        </div>
-      </div>
-        <div class="row" *ngFor="let topic of topics">
-          <div class="col-md-3"></div>
-          <div class="col-md-6">
+         </div>
+        <div class="row">
+            <div class="col-md-12" *ngFor="let topic of topics">
             <div class="card" style="margin-top: 8%;">
-                <div class="card-header card-header-danger">
+                <div class="card-header card-header-primary">
                     <h4 class="card-title">{{ topic.title }}</h4>
-                    <p class="card-category">by {{ topic.user }}</p>
+                    <p class="card-category">by {{ topic.user.username }}</p>
                 </div>
                 <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3" *ngFor="let post of topic.posts">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title">{{ post.title }}</h4>
-                                        <p class="card-category">{{ post.text }}</p>
+                    <div class="row">
+                        <div class="col-md-6" *ngFor="let post of topic.posts">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4 class="card-title">{{ post.title }}</h4>
+                                    <p class="card-category">{{ post.text }}</p>
+
+                                    <ul class="list-group list-group-flush" *ngIf="isCommentVisible(post._id)">
+                                        <li class="list-group-item" *ngFor="let comment of post.comments"><strong>@{{ comment.user.username }}</strong><i>: {{ comment.text }}</i></li>
+                                      </ul>
+                                </div>
+                                <div class="card-footer pull-right">
+                                    <button mat-raised-button class="btn btn-outline-primary btn-sm pull-right" (click)="setCommentVisible(post._id)">Comments</button>
+                                    <mat-form-field class="col-md-6">
+                                        <input matInput placeholder="Comment" [(ngModel)]="comment.text" name="comment.text" required>
+                                        
+                                    </mat-form-field>
+                                    <div class="col-md-2">
+                                        <button mat-raised-button class="btn btn-primary btn-sm pull-right" (click)="onComment(post._id)">Send</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <form>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <form>
                         <div class="row">
-                            <div class="col-md-9">
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Title" [(ngModel)]="post.title" name="post.title" required>
-                                </mat-form-field>
-                                <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Post" [(ngModel)]="post.text" name="post.text" required>
-                                  </mat-form-field>
+                            <div class="col-md-2">
+                                <h3>Add Post</h3>
                             </div>
-                            <div class="col-md-3">
-                                <button mat-raised-button type="submit" class="btn btn-danger" (click)="onPost(topic._id)">Post</button>
+                            <mat-form-field class="col-md-4">
+                                <input matInput placeholder="Title" [(ngModel)]="post.title" name="post.title" required>
+                            </mat-form-field>
+                            <mat-form-field class="col-md-4">
+                                <input matInput placeholder="Post" [(ngModel)]="post.text" name="post.text" required>
+                            </mat-form-field>
+                            <div class="col-md-2">
+                                <button mat-raised-button type="submit" class="btn btn-primary btn-round btn-just-icon" (click)="onPost(topic._id)">
+                                    <i class="material-icons">add</i>
+                                </button>
                             </div>
                         </div>
                         <div class="clearfix"></div>
                     </form>
                 </div>
-              </div>
-          </div>
-          </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <span class="col-md-4"></span>
+            <div class="col-md-4 text-center">
+                <button mat-raised-button class="btn btn-danger btn-lg" (click)="onLogout()">Logout</button>
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </div>
 </div>
